@@ -965,7 +965,7 @@ static void im_page()
 		gtk_widget_set_sensitive(opt, FALSE);
 	gaim_button(_("Raise windows on events"), &im_options, OPT_IM_POPUP, vbox2);
 	gaim_button(_("Show logins in window"), &im_options, OPT_IM_LOGON, vbox2);
-	gaim_button(_("Show aliases in tabs/titles"), &im_options, OPT_IM_ALIAS_TAB, vbox2);
+	gaim_button(_("Show aliases in tabs/titles/ticker"), &im_options, OPT_IM_ALIAS_TAB, vbox2);
 	gaim_button(_("Hide window on send"), &im_options, OPT_IM_POPDOWN, vbox2);
 
 	frame = gtk_frame_new(_("Window Sizes"));
@@ -2750,8 +2750,10 @@ static void set_im_option(GtkWidget *w, int option)
 	if (option == OPT_IM_HIDE_ICONS)
 		set_hide_icons();
 
-	if (option == OPT_IM_ALIAS_TAB)
+	if (option == OPT_IM_ALIAS_TAB) {
 		set_convo_titles();
+		BuddyTickerSetNames();
+	}
 
 	if (option == OPT_IM_NO_ANIMATION)
 		set_anim();
